Форматирование README.md"

--- a/README
+++ b/README
@@ -5,6 +5,7 @@
 # Задание 2
 Создайте Mongoose-схему для коллекции «books». Структура документа должна соответствовать следующей структуре объекта:
 
+```json
 {
   id: "string",
   title: "string",
@@ -14,11 +15,13 @@
   fileCover: "string",
   fileName: "string"
 }
+```
 
 # Задание 3
 Перепишите все методы, работающие со статичным объектом Books, на соответствующие методы для работы с Mongoose Model Books.
 
 | Метод | URL | Действие | Комментарий |
+|--------|----------------|-----------------------|--------------------------------------------------------------------|
 | GET |/api/books | Получить все книги | Получаем массив всех книг |
 | GET |/api/books/:id | Получить книгу по ID | Получаем объект книги, если запись не найдена, вернём Code: 404 |
 | POST |/api/books | Создать книгу | Создаём книгу и возвращаем её же вместе с присвоенным ID |
