Форматирование README.md

--- a/README
+++ b/README
@@ -5,7 +5,7 @@
 # Задание 2
 Создайте Mongoose-схему для коллекции «books». Структура документа должна соответствовать следующей структуре объекта:
 
-```json
+```javascript
 {
   id: "string",
   title: "string",
@@ -27,3 +27,8 @@
 | POST |/api/books | Создать книгу | Создаём книгу и возвращаем её же вместе с присвоенным ID |
 | PUT |/api/books/:id | Редактировать книгу по ID | Редактируем объект книги, если запись не найдена, вернём Code: 404 |
 | DELETE | /api/books/:id | Удалить книгу по ID | Удаляем книгу и возвращаем ответ: 'ok' |
+
+| Обозначение | Описание | Пример регулярного выражения|
+|----:|:----:|:----------|
+| literal | Строка содержит символьный литерал literal | foo |
+| re1&#124;re2 | Строка содержит регулярные выражения `rel` или `re2` | foo&#124;bar |
